# event_camera_codecs

./: CHANGELOG.rst  CMakeLists.txt  README.md  event_array_codecs.repos  package.xml
.github/scripts/: build_ros1.bash  build_ros2.bash
.github/workflows/: main.yaml
cmake/: CMakeListsROS1.txt  CMakeListsROS2.txt  ROS1.cmake  ROS2.cmake
include/event_array_codecs/: decoder.h  decoder_factory.h  encoder.h  event_processor.h  evt3_decoder.h  evt3_encoder.h  evt3_types.h  mono_decoder.h  mono_encoder.h  noop_event_processor.h  trigger_decoder.h
include/event_camera_codecs/: decoder.h  decoder_factory.h  encoder.h  event_packet.h  event_processor.h  evt3_decoder.h  evt3_encoder.h  evt3_types.h  libcaer_cmp_decoder.h  libcaer_cmp_types.h  libcaer_decoder.h  mono_decoder.h  mono_encoder.h  noop_event_processor.h  ros1_ros2_compat.h  trigger_decoder.h
src/: decoder.cpp  encoder.cpp  evt3_decoder.cpp  metavision_test.cpp  perf.cpp
test/: decoder_test.cpp  event_bag_reader.hpp
test/test_data_evt3_trigger/: metadata.yaml  test_data_evt3_trigger_0.db3
test/test_data_libcaer_cmp/: metadata.yaml
test/test_data_libcaer_rollover/: libcaer_rollover_0.db3  metadata.yaml
test/test_data_mono_cd/: metadata.yaml  test_data_mono_cd_0.db3
